// tag::header[]
[width=100%,cols="1,2,8",frame=none,grid=rows]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::containers[]
| 03/29/2022 | Containers | Added a new TR: DevOps with NetApp Astra
// end::containers[]
// tag::containers[]
| 03/08/2022 | Containers | Added a new video demo: Accelerate Software Development with Astra Control and NetApp FlexClone Technology
// end::containers[]
// tag::containers[]
| 03/01/2022 | Containers | Added new sections to NVA-1160: Installation of Astra Control Center via OperatorHub and Ansible
// end::containers[]
// tag::general[]
// tag::aiml[]
| 02/02/2022 | General | Created landing pages to better organize content for AI and Modern Data Analytics
// end::aiml[]
// end::general[]
// tag::aiml[]
| 01/22/2022 | AI | Added TR: Data movement with E-Series and BeeGFS for AI and analytics workflows
// end::aiml[]
// tag::general[]
// tag::vmware[]
| 12/21/2021 | General | Created landing pages to better organize content for Virtualization and Enterprise Hybrid Cloud
// end::vmware[]
// end::general[]
// tag::containers[]
| 12/21/2021 | Containers | Added a new video demo: Leverage NetApp Astra Control to Perform Post-mortem Analysis and Restore Your Application to NVA-1160
// end::containers[]
// tag::vmware[]
| 12/06/2021 | Hybrid Cloud / Virtualization | Creation of Enterprise Hybrid Cloud (EHC) content for virtualization environment and guest connected storage options
// end::vmware[]
// tag::containers[]
| 11/15/2021 | Containers | Added a new video demo: Data Protection in CI/CD pipeline with Astra Control to NVA-1160
// end::containers[]
// tag::aiml[]
| 11/15/2021 | Modern Data Analytics | New content: Best Practices for Confluent Kafka
// end::aiml[]
// tag::automation[]
| 11/02/2021 | Automation | AWS Authentication Requirements for CVO and Connector Using NetApp Cloud Manager
// end::automation[]
// tag::aiml[]